# ComfyUI-Creepy_nodes

./: README.md  SECURITY.md  __init__.py  evaluate.txt  nodes.py  pyproject.toml  requirements.txt  system_prompt.txt
.github/: FUNDING.yml
.github/workflows/: Image_batch_To_Random_Prompt_(Or_Image).json  Qwen(chain).json  Randomized_Prompt_From_Audio.json  publish_action.yml  wan(chain_part_2).json
assets/: evaluate_img.json  evaluate_people.json  summary.json
assets/Lora_db/: lora_triggers.json
assets/nodes/: AnalyzeLatent.py  ArgosTranslateNode.py  ArtAnalyst.py  AudioKeywordExtractor.py  CLIPSwitch.py  Categorizer.py  CharacterSelect.py  CharacterVault.py  CollectAndDistributeText.py  Coloring.py  ConditionalLoRAApplier.py  Conditional_lora_selector.py  Creepy_directors_slate.py  CustomNodeManager.py  DelayNode.py  DelayTextNode.py  DynamicClipswitch.py  DynamicConditioning.py  DynamicDelayText.py  DynamicImageSwitch.py  DynamicLatentSwitch.py  DynamicModelswitch.py  DynamicStartIndex.py  DynamicVAESwitch.py  EmptyFolderCleanerNode.py  EvaluaterNode.py  FallbackTextSwitch.py  FileSorterNode.py  FilterImages.py  GeminiAPI.py  GeminiAudioAnalyzer.py  GeminiTokenCounter.py  IMGToIMGConditioning.py  ImageFormatConverter.py  KeywordExtractor.py  LoadBatchFromDir.py  LoadBatchImagesDir.py  LoadImagesFromDirectory.py  LoadLatentFromPath.py  LoadVideoPath.py  (+25 more)
assets/prompts/: Scene_Director.md  Scene_Director.txt  attractiveness_nice.txt  attractiveness_rude.txt  attractiveness_x.txt  attractiveness_xx.txt  audio_keywords.txt  evaluate_img.txt  evaluate_img_long.txt  keywords.txt  prompt.txt  summary.txt  summary1.txt  system_prompt.txt
assets/scripts/: api_keys_config.json  gemini_api_key_free.txt  gemini_api_key_paid.txt  greek_gods.json  greek_heroes.json  greek_monsters.json  (+2 more)
docs/: ai_agents.md  automation.md  file_management.md  utility.md
web/: creepynodes.css  index.js
(+2 files in other folders)
