[project]
name = "comfyui_creepy_nodes"
description = "A collection of switch nodes, dynamic nodes, evaluation nodes, translation node and some other specialized nodes."
version = "2.2.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Creepybits/ComfyUI-Creepy_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "creepybits"
DisplayName = "Creepy_nodes"
Icon = "https://github.com/Creepybits/ComfyUI-Creepy_nodes/blob/a392f0cbc076a66b261b51e315fd5b5d356c2cf2/assets/cpbt.png"
